# sys_info

./: CMakeLists.txt  README.md  server_config.xml  tests_db_settings.xml
db_scripts/: create_client_info_tables.sql  drop_client_info_tables.sql
include/: boost_logger.h  catch.h  client_config.h  client_detail.h  db_adapter.h  logger.h  pg_db_adapter.h  repeat_timer.h  request.h  server_service.h  sys_info_client_request.h  sys_info_server.h  sys_info_server_session.h  utils.h
src/: client_main.cpp  db_adapter.cpp  pg_db_adapter.cpp  repeat_timer.cpp  server_main.cpp  server_service.cpp  sys_info_client_request.cpp  sys_info_server.cpp  sys_info_server_session.cpp  utils.cpp
test/: sys_info_tests.cpp
test/resources/: db_settings.xml  server_config.xml
